bin/testsuite/tests/compiler/src/errors/compiler4896.swg
#global testerror "Err0567"
18446744073709551616